<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guides"
            android:icon="@drawable/ic_insert_emoticon_black_24dp"
            android:title="@string/nav_guides"
            />
        <item
            android:id="@+id/nav_attractions"
            android:icon="@drawable/ic_audiotrack_black_24dp"
            android:title="@string/nav_attractions"
            />
        <item
            android:id="@+id/nav_accommodations"
            android:icon="@drawable/ic_weekend_black_24dp"
            android:title="@string/nav_accommodations"
            />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"
                />
        </menu>
    </item>

</menu>
